# wholeRobot

./: README.md
actionlib_tutorials/: CMakeLists.txt  package.xml
actionlib_tutorials/launch/: test.launch
actionlib_tutorials/src/: client.py
auger/: CMakeLists.txt  README.md  package.xml
auger/config/: PID.yaml  README.md  common_costmap.yaml  global_costmap.yaml  global_planner_params.yaml  local_costmap.yaml  states.yaml
auger/include/gen2bot/: README.md  augerOperationsClass.h
auger/launch/: README.md  autoJetson.launch  autonomy.launch  autonomyRewrite.launch  laptop.launch  runMotorsAuger.launch  runMotorsAugerAuto.launch
auger/scripts/: README.md  autoManager.py  permanentGoalAug.py  robot_mux_auto.py  robot_mux_control_auger.py
auger/src/: README.md  augerOperationsClass.cpp  falcon_tests.cpp  manualDrive.cpp  processManagerClass.cpp  robot_mux.cpp
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: talker.py
gen2bot/: CMakeLists.txt  README.md  package.xml
gen2bot/config/: PID.yaml  PIDTrencher.yaml  README.md  common_costmap.yaml  global_costmap.yaml  local_costmap (another copy).yaml  local_costmap.yaml  robot_localization.yaml  states.yaml
gen2bot/include/gen2bot/: NotDTClass.h  NotDTClassNew.h  ProcessManager.h  README.md  TOCVelocity.h  augerOperationsClass.h  ball_screw_trencher_class.h  base_trencher_class.h  gen2bot1 (copy).h  gen2bot1.h  gen2botPractice.h  manual_trencher_class.h  processManagerClass.h  semi_auto_trencher_class.h  trencherOperationsClass.h  trencherOperationsClassMar.h  wheelDrive.h  wheel_trencher_class.h
gen2bot/include/gen2bot/ctre/: README.md
gen2bot/launch/: README.md  allMotors.launch  allMotorsZach.launch  autoTests.launch  autonomy.xml  autonomyRewrite.xml  brianWork.launch  brokenFullAuto.launch  fullAutonomyRewrite copy.xml  fullAutonomyRewrite.launch  fullAutonomyRewrite.xml  fullAutonomyRewriteAttempt  fullAutonomyRewriteCopy.launch  laptopScripts.launch  manualTest.launch  manualTestJetson.launch  manualTestJetsonMar.launch  manualTestJetsonMarFin.launch  mayAutonomy.launch  mondayRun.launch  motorTesting.launch  motorWithParams.xml  motorWithParamsAuto.xml  notDT.launch  notDT.xml  objectDetect.launch  oliverWork.launch  proofOfLifeAuto.launch  rgbd.launch.xml  robot_process_test.launch  semiAuto.launch  wheels.launch
gen2bot/lib/: README.md
gen2bot/scripts/: README.md  autoInputs.py  controllerInputs.py  controllerInputsMar.py  motorTalker.py  motorTester.py  move_base_client.py  move_base_client_params.py  move_base_client_update.py  move_base_dig_client.py  notDTTalker.py  permanentGoal.py  robot_mux_control.py  robot_mux_control_wired.py  twistConvertor.py  wheelTester.py
gen2bot/sessions/: README.md
gen2bot/src/: NotDTAuto.cpp  NotDTClass.cpp  NotDTClassNew.cpp  PIDTester.cpp  ProcessManager.cpp  README.md  TOCVelocity.cpp  augerOperationsClass.cpp  autoDrive.cpp  base_trencher_class.cpp  falcon_tests.cpp  gen2bot.cpp  gen2bot1 (copy).cpp  gen2bot1.cpp  gen2botPractice.cpp  listenerMotor.cpp  listenerMotorAuto.cpp  manualAutoSelection.cpp  manualDrive.cpp  manual_trencher_class.cpp  mine.cpp  mine1 (copy).cpp  mine1.cpp  minePractice.cpp  miningOperationsAuger.cpp  miningOperationsTrencheMar.cpp  miningOperationsTrencheMar2.cpp  miningOperationsTrencherAuto.cpp  miningOperationsTrencherManual.cpp  miningOperationsTrencherPOL.cpp  motorTest.cpp  notDT.cpp  notDTAuto.cpp  processManagerClass.cpp  robot_mux.cpp  semi_auto_trencher_class.cpp  trencherOperationsClass.cpp  trencherOperationsClassMar.cpp  wheelDrive.cpp  wheelTest.cpp
motorControlGen2Bot/: README.md
motorControlGen2Bot/motor_control_gen2bot/: CMakeLists.txt
motorControlGen2Bot/motor_control_gen2bot/lib/: README.md
motorControlGen2Bot/motor_control_gen2bot/src/: falcon_tests.cpp  listenerMotorAuto.cpp
motor_control_gen2bot/: CMakeLists.txt  README.md  package.xml
motor_control_gen2bot/include/motor_control_gen2bot/: gen2botHead.h
motor_control_gen2bot/scripts/: README.md
motor_control_gen2bot/src/: gen2bot.cpp  gen2botHead.cpp  gen2botPractice.cpp  listenerMotor.cpp  mine.cpp  minePractice.cpp
motor_control_jen2bot/: CMakeLists.txt  README.md  package.xml
motor_control_jen2bot/scripts/: motorTalker.py
motor_control_jen2bot/src/: falcon_tests.cpp  listenerMotor.cpp
object_detection_with_intel_d455/: CMakeLists.txt  README.md  package.xml
object_detection_with_intel_d455/config/: common_costmap.yaml  global_costmap.yaml  local_costmap.yaml
object_detection_with_intel_d455/launch/: autonomy.xml  localizing_navigation_mapping.xml  object_detect_using_find2d_object.xml  object_detect_using_find2d_object_with_t265.xml
object_detection_with_intel_d455/object_detection_with_intel_d455/: package.xml
object_detection_with_intel_d455/object_detection_with_intel_d455/config/: common_costmap.yaml  global_costmap.yaml
object_detection_with_intel_d455/object_detection_with_intel_d455/launch/: README.md  autonomyRewrite.xml  localizing_navigation_mapping_cluttered.launch.xml  rgb.launch.xml
object_detection_with_intel_d455/urdf/: roberto.xacro
rgbd_launch/: README.md
rgbd_launch/launch/includes/: rgb.launch.xml
robot_setup_tf/: CMakeLists.txt  package.xml
robot_setup_tf/src/: pointcloudPub.cpp  tf_broadcaster.cpp  tf_listener.cpp
